--- a/latex/acceptors_and_transducers.tex
+++ b/latex/acceptors_and_transducers.tex
@@ -158,7 +158,7 @@ Note also that start states can have incoming arcs (as in state $1$) and accept
 states can have outgoing arcs, as in state $3$.
 
 \begin{example}
-Compute the score of the string $ab$ in figure 1.
+Compute the score of the string $ab$ in figure~\ref{fig:multi_start_accept}.
 \end{example}
 
 \begin{proof}[\unskip\nopunct]
