--- a/latex/math_commands.tex
+++ b/latex/math_commands.tex
@@ -34,7 +34,7 @@
 %% Language
 \renewcommand\L{\mathcal{L}}
 
-%% <s> and </s> tokens
-\newcommand{\sos}{\textrm{<s>}}
-\newcommand{\eos}{\textrm{</s>}}
-\newcommand{\blank}{\textrm{<b>}}
+%% <s>, </s>, and <b> tokens
+\newcommand{\sos}{\textrm{\textless s\textgreater}}
+\newcommand{\eos}{\textrm{\textless /s\textgreater}}
+\newcommand{\blank}{\textrm{\textless b\textgreater}}
