--- a/notebooks/advanced_operations.ipynb
+++ b/notebooks/advanced_operations.ipynb
@@ -341,7 +341,7 @@
     "\n",
     "## Compose\n",
     "\n",
-    "The composition is a straightforward generalization of the intersection from acceptors to transducers. Assume the first inpuut graph transduces the sequence $\\vx$ to the string $\\vy$ and the second graph transduces $\\vy$ to $\\vz$. Then the composed graph transduces $\\vx$ to $\\vz$.\n",
+    "The composition is a straightforward generalization of the intersection from acceptors to transducers. Assume the first input graph transduces the sequence $\\vx$ to the string $\\vy$ and the second graph transduces $\\vy$ to $\\vz$. Then the composed graph transduces $\\vx$ to $\\vz$.\n",
     "\n",
     "From an implementation standpoint the compose and intersect algorithms are almost identical. The two minor differences are 1) the way that labels are matched in the input graphs and 2) the labels of the new arcs in the composed graph. Arcs in a transducer have both input and output labels. We match the output arc label from the first graph to the input arc label from the second graph. This means that compose, unlike intersect, is not commutative, since the order of the two graphs makes a difference.\n",
     "\n",
@@ -680,7 +680,7 @@
     "\n",
     "We computed the forward and Viterbi score by listing all possible paths, computing their individual weights, and then accumulating either with the $\\max$ or the $LSE$ operations. This approach won't scale to larger graphs because the number of paths can grow combinatorially. Instead, we will use a much more efficient dynamic programming algorithm which works for both the forward and Viterbi score.\n",
     "\n",
-    "The dynamic programming algorithm relies on the following recurions. Consider a state $v$ and let $e_i$ for $i=1, \\ldots, k$ be the set of arcs for which $v$ is the destination node. For a given arc $e$ we let $\\textrm{source}(e)$ denote the source node for that arc. The score of all paths which start at a start state and terminate at node $v$ can be constructed from the score of all paths which start at a start state and terminate at the state $\\textrm{source}(e_i)$ and the arc weight $w(e_i)$ for $i=1\\ldots, k$. For the Viterbi score, the recursion is:\n",
+    "The dynamic programming algorithm relies on the following recursions. Consider a state $v$ and let $e_i$ for $i=1, \\ldots, k$ be the set of arcs for which $v$ is the destination node. For a given arc $e$ we let $\\textrm{source}(e)$ denote the source node for that arc. The score of all paths which start at a start state and terminate at node $v$ can be constructed from the score of all paths which start at a start state and terminate at the state $\\textrm{source}(e_i)$ and the arc weight $w(e_i)$ for $i=1\\ldots, k$. For the Viterbi score, the recursion is:\n",
     "\n",
     "$$\n",
     "s_v = \\max_{i=1}^k \\left( s_{\\textrm{source}(e_i)} + w(e_i) \\right),\n",
@@ -756,7 +756,7 @@
     "    <img src=\"figures/viterbi_path_back.svg\"/>\n",
     "  </div>\n",
     "  <div class=\"caption\" markdown=\"span\">\n",
-    "      Each state is labeled with the state label and viterbi score from the start state up to that state. The red arrows indicate the arc which is part of the Viterbi path up to the given state. The complete Viterbi path can be found by following red arcs back from the accept state.\n",
+    "      Each state is labeled with the state label and Viterbi score from the start state up to that state. The red arrows indicate the arc which is part of the Viterbi path up to the given state. The complete Viterbi path can be found by following red arcs back from the accept state.\n",
     "  </div>\n",
     "</div>\n",
     "\n",
