--- a/notebooks/basic_operations.ipynb
+++ b/notebooks/basic_operations.ipynb
@@ -99,7 +99,7 @@
     "    <img src=\"figures/fsa_pre_closure.svg\"/>\n",
     "  </div>\n",
     "  <div class=\"caption\" markdown=\"span\">\n",
-    "      An example of a simple acceptor with language $\\{ab\\}$, in other words $\\mathcal{L}(\\gA) = \\{ab\\}$.\n",
+    "      An example of a simple acceptor with language $\\{aba\\}$, in other words $\\mathcal{L}(\\gA) = \\{aba\\}$.\n",
     "  </div>\n",
     "</div>\n",
     "\n",
@@ -148,7 +148,7 @@
     "    <img src=\"figures/fsa_closure.svg\"/>\n",
     "  </div>\n",
     "  <div class=\"caption\" markdown=\"span\">\n",
-    "      The closure $\\gA^*$ of the graph above. The language of the graph is $\\{\\epsilon, ab, abab, \\ldots\\}$.\n",
+    "      The closure $\\gA^*$ of the graph above. The language of the graph is $\\{\\epsilon, aba, abaaba, \\ldots\\}$.\n",
     "  </div>\n",
     "</div>\n",
     "\n",
@@ -442,7 +442,7 @@
    "id": "e7551a27",
    "metadata": {},
    "source": [
-    "The concatenated graph can be constructed from the original input graphs by wiring start states to accept states. Assume we are concatenating $\\gA_1, \\ldots, \\gA_n$. The start states of the concatenated graph are the start states of the first graph, $\\gA_1$. The accept states of the concatenated graph are the accept states of the last graph, $\\gA_n$. For any two graph $\\gA_i$ and $\\gA_{i+1}$, we connect each start state of $\\gA_i$ to each accept state of $\\gA_{i+1}$ with an $\\epsilon$ transition.\n",
+    "The concatenated graph can be constructed from the original input graphs by connecting the accept states of one graph to the start states of the next. Assume we are concatenating $\\gA_1, \\ldots, \\gA_n$. The start states of the concatenated graph are the start states of the first graph, $\\gA_1$. The accept states of the concatenated graph are the accept states of the last graph, $\\gA_n$. For any two graph $\\gA_i$ and $\\gA_{i+1}$, we connect each accept state of $\\gA_i$ to each start state of $\\gA_{i+1}$ with an $\\epsilon$ transition.\n",
     "\n",
     "<div class=\"figure\">\n",
     "  <div class=\"img\" style=\"padding-top:34px;\">\n",
