--- a/notebooks/extended_examples.ipynb
+++ b/notebooks/extended_examples.ipynb
@@ -651,7 +651,7 @@
     "\\LSE_{\\va \\in \\gA_{\\mX, \\vy}} \\log p(\\va) = \\LSE_{\\va \\in \\gA_{\\mX, \\vy}} s(\\va) - \\log Z\n",
     "$$\n",
     "\n",
-    "To show this, we need two identities. The first identity let's us pull independent terms out of the $\\LSE$ operation:\n",
+    "To show this, we need two identities. The first identity lets us pull independent terms out of the $\\LSE$ operation:\n",
     "\n",
     "$$\n",
     "\\LSE_x(x + y) = \\LSE(x) + y.\n",
@@ -663,7 +663,7 @@
     "\\LSE_x (x + y) = \\log \\sum_x e^{x+y} = \\log \\sum_x e^x e^y = \\log \\sum_x e^x + \\log e^y = \\LSE(x) + y.\n",
     "$$\n",
     "\n",
-    "The second identity let's us rearrange products and sums:\n",
+    "The second identity lets us rearrange products and sums:\n",
     "\n",
     "$$\n",
     "\\prod_{t=1}^T \\sum_{z} s_t(z) = \\sum_\\vz \\prod_{t=1}^t s_t(z_t).\n",
@@ -925,7 +925,7 @@
     "    <img src=\"figures/asg_tokens.svg\"/>\n",
     "  </div>\n",
     "  <div class=\"caption\" markdown=\"span\">\n",
-    "    The complete token graph $\\gT$ for the token set $\\{a, b, c\\}$. The token graph is constructed by taking the closure of the union of the individual token graphs, $\\gT = \\gT_a + \\gT_b + \\gT_c$.\n",
+    "    The complete token graph $\\gT$ for the token set $\\{a, b, c\\}$. The token graph is constructed by taking the closure of the union of the individual token graphs, $\\gT = (\\gT_a + \\gT_b + \\gT_c)^*$.\n",
     "  </div>\n",
     "</div>"
    ]
@@ -972,7 +972,7 @@
     "\n",
     "The ASG loss function has two modeling limitations which CTC attempts to improve. First, ASG does not elegantly handle repeat tokens in the output. Second, ASG does not allow for optional null inputs. I'll discuss each of these in turn.\n",
     "\n",
-    "**Repeat Tokens:** A repeat token is two consecutive tokens with the same value. For example, the $b$'s in $abba$ is a repeat, but the $a$ is not. In ASG, repeat tokens in the output create an ambiguity. A single alignment can map to multiple output sequences. For example, consider the alignment $abbbaa$. This can map to any of the outputs $aba$, $abba$, $abbba$, $abaa$, $abbaa$, or $abbbaa$. There are several heuristics to resolve this. One option is to use special tokens for repeat characters. For example if $\\vy = abba$, then we could encode it as $ab_2a$, where $b_2$ corresponds to two $b$'s.In this case,  the alignment $abbba$ corresponds to the output $aba$,the alignment $ab_2b_2b_2a$ corresponds to the output $abba$, and the alignment $abbb_2$ corresponds to $abbba$.\n",
+    "**Repeat Tokens:** A repeat token is two consecutive tokens with the same value. For example, the $b$'s in $abba$ is a repeat, but the $a$ is not. In ASG, repeat tokens in the output create an ambiguity. A single alignment can map to multiple output sequences. For example, consider the alignment $abbbaa$. This can map to any of the outputs $aba$, $abba$, $abbba$, $abaa$, $abbaa$, or $abbbaa$. There are several heuristics to resolve this. One option is to use special tokens for repeat characters. For example if $\\vy = abba$, then we could encode it as $ab_2a$, where $b_2$ corresponds to two $b$'s. In this case, the alignment $abbba$ corresponds to the output $aba$, the alignment $ab_2b_2b_2a$ corresponds to the output $abba$, and the alignment $abbb_2a$ corresponds to $abbba$.\n",
     "\n",
     "There are two problems with this solution. First, we have to hard code into the token set an upper limit on the number of repeats to allow. Second, if we allow $n$ repeats, then we multiply the token set size by a factor of $n$ causing potential computation and sample efficiency issues.\n",
     "\n",
