--- a/latex/acknowledge.tex
+++ b/latex/acknowledge.tex
@@ -1,3 +1,4 @@
 \section*{Acknowledgements}
 
-Thanks to Wes Bouaziz and Loren Lugosch for feedback on this work.
+Thanks to Wes Bouaziz, Fangjun Kuang, and Loren Lugosch for feedback on this
+work.
