--- a/notebooks/advanced_operations.ipynb
+++ b/notebooks/advanced_operations.ipynb
@@ -62,7 +62,7 @@
     "\\DeclareMathOperator*{\\LSE}{\\textrm{LSE}}\n",
     "\\renewcommand\\L{\\mathcal{L}}$The intersection of two acceptors is the set of strings which is accepted by both of them. The score of a path in the intersected graph is the sum of the score of the path in each of the input graphs. More formally the language of the intersected graph is given by $\\{ \\vx \\mid \\vx \\in \\L(\\gA_1) \\;\\land\\; \\vx \\in \\L(\\gA_2)\\}$.\n",
     "\n",
-    "The analagous operation for transducers is the composition, which we will discuss in more detail in the next section. In most machine learning applications, intersect and compose tend to be the primary operations used to compute more complex graphs from simpler input graphs. Thus gaining a deeper understanding of these two operations is worth the time."
+    "The analogous operation for transducers is the composition, which we will discuss in more detail in the next section. In most machine learning applications, intersect and compose tend to be the primary operations used to compute more complex graphs from simpler input graphs. Thus gaining a deeper understanding of these two operations is worth the time."
    ]
   },
   {
@@ -112,11 +112,11 @@
     "    <img src=\"figures/intersect_2.svg\"/> \n",
     "  </div>\n",
     "  <div class=\"caption\" markdown=\"span\">\n",
-    "      The acceptor on the left has a language of $a^*b$ and the acceptor on the right accepts all nine sequences of lenght $2$. The only sequence accepted by both, and hence is in the intersection, is the string $ab$.\n",
+    "      The acceptor on the left has a language of $a^*b$ and the acceptor on the right accepts all nine sequences of length $2$. The only sequence accepted by both, and hence is in the intersection, is the string $ab$.\n",
     "  </div>\n",
     "</div>\n",
     "\n",
-    "The general algortihm relies on a queue to explore pairs of states from the two input graphs. Pseudocode is given below.\n",
+    "The general algorithm relies on a queue to explore pairs of states from the two input graphs. Pseudocode is given below.\n",
     "\n",
     "```C++\n",
     "function intersect(g1, g2) {\n",
@@ -208,7 +208,7 @@
     "    <td style=\"padding-top:30px;\"><img src=\"figures/intersect_step_6_g_out.svg\"/></td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "      <td colspan=\"3\"><div class=\"table_caption\" markdown=\"span\">The next pair of matching outgoing arcs match on the label $b$ and lead to the state pair $(1, 2)$. We add $(1, 2)$ to the queue and to the interescted graph. Also, since $1$ is an accept state in the first graph and $2$ is an accept state in the second graph, $(1, 2)$ is an accept state in the intersected graph.</div></td>\n",
+    "      <td colspan=\"3\"><div class=\"table_caption\" markdown=\"span\">The next pair of matching outgoing arcs match on the label $b$ and lead to the state pair $(1, 2)$. We add $(1, 2)$ to the queue and to the intersected graph. Also, since $1$ is an accept state in the first graph and $2$ is an accept state in the second graph, $(1, 2)$ is an accept state in the intersected graph.</div></td>\n",
     "  </tr>\n",
     "  <tr>\n",
     "    <td><img src=\"figures/intersect_step_7_g1.svg\"/></td>\n",
@@ -347,7 +347,7 @@
     "\n",
     "The input label of a new arc in the composed graph is the input label of the corresponding arc in the first input graph. The output label of a new arc in the composed graph is the output label of the corresponding arc in the second input graph. For example, assume we have two arcs, the first with label $x_1\\!:\\!x_2$, and the second with label $y_1\\!:\\!y_2$. If $x_2 = y_1$, then the arcs are considered a match. The new arc will have the label $x_1\\!:\\!y_2$.\n",
     "\n",
-    "Think of matrix mutiplication as an analogy or mnemonic device. When multiplying two matrices they have to match on the inner dimension, and the dimensions of the output matrix are the outer dimensions. In the same way the inner labels of the two arcs must match and the resulting arc labels are the outer labels of the two input arcs.\n",
+    "Think of matrix multiplication as an analogy or mnemonic device. When multiplying two matrices they have to match on the inner dimension, and the dimensions of the output matrix are the outer dimensions. In the same way the inner labels of the two arcs must match and the resulting arc labels are the outer labels of the two input arcs.\n",
     "\n",
     "---\n",
     "\n",
@@ -450,7 +450,7 @@
     "\n",
     "The basic implementation of intersection and composition we have discussed so far doesn't extend to $\\epsilon$ transitions. Allowing $\\epsilon$ transitions in these algorithms makes them more complicated. In this section I will illustrate the challenges with the naive approach and sketch at a high-level how to actually include $\\epsilon$ transitions in the algorithms.\n",
     "\n",
-    "First, consider the simpler case when only the first input graphs has $\\epsilon$ transitions. In this case, whenever we encounter an outgoing $\\epsilon$ transition from a state in the first graph we can optionally traverse it without matching a corresponding arc in the second graph. Consider the two subgraphs below.\n",
+    "First, consider the simpler case when only the first input graphs has $\\epsilon$ transitions. In this case, whenever we encounter an outgoing $\\epsilon$ transition from a state in the first graph we can optionally traverse it without matching a corresponding arc in the second graph. Consider the two sub-graphs below.\n",
     "\n",
     "<div class=\"figure\">\n",
     "  <div class=\"img\" style=\"min-width:140px;\">\n",
@@ -578,7 +578,7 @@
     "  </div>\n",
     "</div>\n",
     "\n",
-    "The language of this graph is correct. It accepts the string $ab$ which is the only string in the intersection. However, the weight it assigns to the string $ab$ is incorrect. Each individual path has the correct weight, but there are three paths for $ab$. The final weight will receive three contributions, one from each path, instead of a single contribution from one path. The solution to this problem is to choose only one of the three paths and avoid the inadvertant redundancy. For example we could keep the bottom path and ignore the top two as in the graph below.\n",
+    "The language of this graph is correct. It accepts the string $ab$ which is the only string in the intersection. However, the weight it assigns to the string $ab$ is incorrect. Each individual path has the correct weight, but there are three paths for $ab$. The final weight will receive three contributions, one from each path, instead of a single contribution from one path. The solution to this problem is to choose only one of the three paths and avoid the inadvertent redundancy. For example we could keep the bottom path and ignore the top two as in the graph below.\n",
     "\n",
     "<div class=\"figure\">\n",
     "  <div class=\"img\">\n",
@@ -747,7 +747,7 @@
     "\n",
     "### Viterbi Path\n",
     "\n",
-    "A Viterbi path is a path for which the Viterbi score is attained. We can compute one of the Viterbi paths with a straightforward extension of the Viterbi scoring algorithm. At each state when we compute the score, we also maintain a backpointer to the arc which resulted in the maximum score. When the algorithm terminates, we can trace the backpointers to the start state and extract the Viterbi path.\n",
+    "A Viterbi path is a path for which the Viterbi score is attained. We can compute one of the Viterbi paths with a straightforward extension of the Viterbi scoring algorithm. At each state when we compute the score, we also maintain a back-pointer to the arc which resulted in the maximum score. When the algorithm terminates, we can trace the back-pointers to the start state and extract the Viterbi path.\n",
     "\n",
     "An example of this can be seen in the graph below.\n",
     "\n",
