--- a/notebooks/differentiation_with_automata.ipynb
+++ b/notebooks/differentiation_with_automata.ipynb
@@ -71,7 +71,7 @@
     "\n",
     "## Derivatives\n",
     "\n",
-    "Many operations used with vectors, matrices, and $n$-dimensional tensors are differentiable. This means we can compute the change in any of the output elements with respect to an infinitesimal change in any of the input elements. For example, consider a vector $\\vz = f(\\vx, \\vy)$ which is the output of a function of two vectors $\\vx$ and $\\vy$. The Jacobian of $\\vz$ with respect to $\\vx$ is the  natrix of partial derivatives with entries $\\frac{\\partial \\vz_i}{\\partial \\vx_j}$. The gradient is defined as the tensor of partial derivatives of a scalar function. So if $f(\\vx) \\in \\mathbb{R}$ is a scalar function, then the gradient is:\n",
+    "Many operations used with vectors, matrices, and $n$-dimensional tensors are differentiable. This means we can compute the change in any of the output elements with respect to an infinitesimal change in any of the input elements. For example, consider a vector $\\vz = f(\\vx, \\vy)$ which is the output of a function of two vectors $\\vx$ and $\\vy$. The Jacobian of $\\vz$ with respect to $\\vx$ is the matrix of partial derivatives with entries $\\frac{\\partial \\vz_i}{\\partial \\vx_j}$. The gradient is defined as the tensor of partial derivatives of a scalar function. So if $f(\\vx) \\in \\mathbb{R}$ is a scalar function, then the gradient is:\n",
     "\n",
     "$$\n",
     "\\nabla f(\\vx) = \\left[ \\frac{\\partial f(\\vx)}{\\partial \\vx_{1}}, \\ldots, \\frac{\\partial f(\\vx)}{\\partial \\vx_{n}}  \\right]^\\top.\n",
@@ -182,7 +182,7 @@
     "\n",
     "In the previous section we saw how to compute derivatives for some common automata operations. Automatic differentiation greatly simplifies the process of computing derivatives for arbitrary compositions of operations. In this section, we will discuss *reverse-mode* automatic differentiation at a high-level.\n",
     "\n",
-    "Reverse-mode automatic differentiation proceeds in two steps. First, a forward pass computes all of the operations. Then, a backward pass computes the gradients. During the forward pass the composition of operations is stored in a computation graph (not to be confused with an automata). Data and metadata are also cached during the forward pass to make the gradient comptuation more efficient. There is often a trade-off between memory and compute in that we can save more intermediate data to reduce the computation required during but increase the memory required during the bakcward pass.\n",
+    "Reverse-mode automatic differentiation proceeds in two steps. First, a forward pass computes all of the operations. Then, a backward pass computes the gradients. During the forward pass the composition of operations is stored in a computation graph (not to be confused with an automata). Data and metadata are also cached during the forward pass to make the gradient computation more efficient. There is often a trade-off between memory and compute in that we can save more intermediate data to reduce the computation required during but increase the memory required during the backward pass.\n",
     "\n",
     "Consider the graph equation:\n",
     "\n",
