--- a/latex/acceptors_and_transducers.tex
+++ b/latex/acceptors_and_transducers.tex
@@ -73,9 +73,10 @@ nondeterministic.
 Let's start by constructing some very basic automata to get a feel for their
 various properties.
 
-The start state $s = 0$ has a bold circle around it. The accepting state $1$ is
+In figure~\ref{fig:simple_fsa}, the start state $s = 0$ has a bold circle
+around it. The accepting state $1$ is
 represented with concentric circles. Each arc has a label and a corresponding
-weight. So the first arc from state $0$ to state $1$ with the text $a/0$ means
+weight. So the first arc from state $0$ to state $2$ with the text $a/0$ means
 the label is $a$ and the weight is $0$. The fact that there is only a single
 label on each arc means this graph is an \emph{acceptor}. Since it has weights,
 we say its a weighted acceptor. Since the number of states is finite, some
